<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/bg_screen2">

    <TextView
        android:id="@+id/slide_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slideTitle2"
        android:textSize="40sp"
        android:textColor="@color/textSlideColor"
        android:fontFamily="@font/ps_bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"/>

    <!--FIRST INPUT-->
    <TextView
        android:id="@+id/region_textview"
        android:layout_below="@id/slide_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regionText"
        android:layout_marginTop="@dimen/textTopMargin"
        android:fontFamily="@font/roboto_regular"
        android:textSize="@dimen/textRegularSize"
        android:textColor="@color/textSlideColor"
        android:layout_marginStart="@dimen/textStartMargin"/>

    <Button
        android:id="@+id/region_button"
        android:layout_below="@id/slide_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/roboto_regular"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/hintRegion"
        android:textColor="@color/textSlideColor"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:maxLength="10"
        android:ellipsize="marquee"/>

    <!--SECOND INPUT-->
    <TextView
        android:id="@+id/city_textview"
        android:layout_below="@id/region_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cityText"
        android:layout_marginTop="@dimen/textTopMargin"
        android:fontFamily="@font/roboto_regular"
        android:textSize="@dimen/textRegularSize"
        android:textColor="@color/textSlideColor"
        android:layout_marginStart="@dimen/textStartMargin"/>

    <Button
        android:id="@+id/city_button"
        android:layout_below="@id/region_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/roboto_regular"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/hintCity"
        android:textColor="@color/textSlideColor"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:maxLength="10"
        android:ellipsize="marquee"/>

    <!--THIRD INPUT-->
    <TextView
        android:id="@+id/province_textview"
        android:layout_below="@id/city_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provinceText"
        android:layout_marginTop="@dimen/textTopMargin"
        android:fontFamily="@font/roboto_regular"
        android:textSize="@dimen/textRegularSize"
        android:textColor="@color/textSlideColor"
        android:layout_marginStart="@dimen/textStartMargin"/>

    <Button
        android:id="@+id/province_button"
        android:layout_below="@id/city_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/roboto_regular"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/hintProvince"
        android:textColor="@color/textSlideColor"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:maxLength="10"
        android:ellipsize="marquee"/>

    <!--FOURTH INPUT-->
    <TextView
        android:id="@+id/school_textview"
        android:layout_below="@id/province_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schoolText"
        android:layout_marginTop="@dimen/textTopMargin"
        android:fontFamily="@font/roboto_regular"
        android:textSize="@dimen/textRegularSize"
        android:textColor="@color/textSlideColor"
        android:layout_marginStart="@dimen/textStartMargin"/>

    <Button
        android:id="@+id/school_button"
        android:layout_below="@id/province_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/roboto_regular"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/hintSchool"
        android:textColor="@color/textSlideColor"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:maxLength="10"
        android:ellipsize="marquee"/>


</RelativeLayout>